--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,8 +1,17 @@
+body {
+  font-family: Arial
+}
+
 .header {
   background-color: #aa2217;
   color:#FFFFFF;
-  /* display: inline-block; */
   overflow: hidden;
+  padding: 10px 20px;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 24px;
 }
 
 .header-right {
