--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,6 +11,17 @@ a {
   color:#FFFFFF;
 }
 
+.sidebar {
+  float: right;
+  margin-left: 50px;
+  margin-right: 20px;
+}
+
+.sidebar img {
+  width: 175px;
+}
+
+
 
 
 h1 {
@@ -22,6 +33,12 @@ h2 {
   padding: 10px;
   font-weight: bold;
   font-size: 16px;
+}
+
+h3 {
+  padding: 10px, 0px;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 
