--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,24 +1,28 @@
 body {
   font-family: Arial;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 p {
-  padding: 5px;
+  padding-top: 10px;
+  margin-right: 200px;
+  padding-left: 20px;
 }
 
 a {
+  font-size: 12px;
   color:#FFFFFF;
 }
 
 .sidebar {
   float: right;
-  margin-left: 50px;
+  margin-left: 20px;
   margin-right: 20px;
 }
 
 .sidebar img {
-  width: 175px;
+  width: 150px;
+  margin-bottom: 20px;
 }
 
 
@@ -30,13 +34,14 @@ h1 {
 }
 
 h2 {
-  padding: 10px;
+  padding-left: 20px;
+  padding-top: 10px;
   font-weight: bold;
   font-size: 16px;
 }
 
 h3 {
-  padding: 10px, 0px;
+  padding: 10px 0px;
   font-weight: bold;
   font-size: 12px;
 }
@@ -66,5 +71,9 @@ h3 {
 }
 
 .main-section {
-  padding: 10px;
+  padding: 20px;
+}
+
+.main-section img {
+  width: 65%;
 }
