--- a/stylesheets/challenge1.css
+++ b/stylesheets/challenge1.css
@@ -50,9 +50,22 @@ h3 {
   color:#FFFFFF;
   overflow: hidden;
   padding: 15px 20px;
+  display: table;
+  width: 100%;
 }
 .header-right {
-  float: right;
+  display: table-cell;
+  height: 30px;
+  width: 100px;
+  vertical-align: middle;
+}
+
+.page-title {
+  display: table-cell;
+  height: 30px;
+  vertical-align: middle;
+  position: relative;
+  left: 30px;
 }
 
 .sub-header {
