--- a/stylesheets/challenge1.css
+++ b/stylesheets/challenge1.css
@@ -15,6 +15,7 @@ a {
 }
 
 .sidebar {
+  /* position: absolute; */
   width: 20%;
   float: right;
   margin-left: 20px;
@@ -55,7 +56,7 @@ h3 {
 }
 .header-right {
   display: table-cell;
-  height: 30px;
+  height: 20px;
   width: 100px;
   vertical-align: middle;
 }
