--- a/stylesheets/challenge2.css
+++ b/stylesheets/challenge2.css
@@ -16,15 +16,21 @@ a {
 }
 
 .sidebar {
-  width: 20%;
-  float: right;
+  width: 100%;
   margin-left: 20px;
   margin-right: 20px;
+  position: absolute;
+  bottom: 0px;
 }
 
 .sidebar img {
-  width: 100%;
+  width: 20%;
+  position: inline;
   margin-bottom: 20px;
+}
+
+.sidebar h3 {
+  position: inline;
 }
 
 
@@ -60,7 +66,7 @@ h3 {
   display: table-cell;
   height: 50px;
   vertical-align: middle;
-  position: relative;
+  position: absolute;
   left: 30px;
 }
 .header-right {
@@ -86,11 +92,11 @@ h3 {
 }
 
 .main-section {
-  padding: 20px;
+  position: relative;
 }
 
 .main-section img {
-  width: 75%;
+  width: 100%;
 }
 
 .footer {
