--- a/stylesheets/challenge2.css
+++ b/stylesheets/challenge2.css
@@ -5,7 +5,7 @@ body {
 
 p {
   padding-top: 10px;
-  padding-right: 200px;
+  padding-right: 20px;
   padding-left: 20px;
 }
 
@@ -15,22 +15,44 @@ a {
   text-decoration: none;
 }
 
-.sidebar {
+.gallery {
+  content: "";
+  clear: both;
+  display: table;
   width: 100%;
-  margin-left: 20px;
-  margin-right: 20px;
-  position: absolute;
-  bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  justify-content: center;
 }
 
-.sidebar img {
-  width: 20%;
-  position: inline;
-  margin-bottom: 20px;
+.gallery img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+
+  /* position: inline; */
+}
+
+figure {
+  display: table;
+  width: 29.3%;
+  float: left;
+  margin: 0;
+  padding: 2%;
+  padding-top:0px;
+}
+
+figcaption {
+  padding-top:40px;
+  font-weight: bold;
+  padding-left: 20px;
+  font-size: 20px;
+  display: table-caption;
+  caption-side: top;
 }
 
 .sidebar h3 {
-  position: inline;
+  /* position: inline; */
 }
 
 
@@ -53,7 +75,7 @@ h3 {
 }
 
 .header {
-  vertical-align: middle;
+  /* vertical-align: middle; */
   background-color: #1d1d1d;
   color:#FFFFFF;
   overflow: hidden;
@@ -65,9 +87,10 @@ h3 {
 .page-title {
   display: table-cell;
   height: 50px;
+  /* text-align: center; */
   vertical-align: middle;
-  position: absolute;
-  left: 30px;
+  /* position: absolute; */
+  padding-left: 30px;
 }
 .header-right {
   display: table-cell;
@@ -92,11 +115,15 @@ h3 {
 }
 
 .main-section {
-  position: relative;
+  background-color: #1d1d1d;
+  color: white;
+  padding-bottom: 20px;
 }
 
 .main-section img {
   width: 100%;
+  object-fit: cover;
+  height: 35%;
 }
 
 .footer {
