--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,12 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: sans-serif; }
 
 .square i {
-  font-size: 7rem; }
+  font-size: 4rem; }
 
 #rect {
   display: inline-grid;
@@ -22,7 +24,8 @@
 
 #gallery {
   grid-column: 4 / 6;
-  grid-row: 1 / 4; }
+  grid-row: 1 / 4;
+  overflow: hidden; }
 
 #square_1 {
   grid-column: 3;
