--- a/styles.scss
+++ b/styles.scss
@@ -20,10 +20,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-transform: uppercase;
+  font-family: sans-serif;
 }
 
 .square i {
-  font-size: 7rem;
+  font-size: 4rem;
 }
 
 #rect {
@@ -38,6 +40,7 @@ body {
 #gallery {
   grid-column: 4 / 6;
   grid-row: 1 / 4;
+  overflow: hidden;
 }
 
 #square_1 {
