--- a/styles.scss
+++ b/styles.scss
@@ -1,11 +1,28 @@
-$darkest-blue: #132238;
-$dark-blue: #364E68;
+$light-brown: #c19d75;
+$dark-blue: #d3e8ed;
 $light-blue: #98CCD3;
 $lightest-blue: #EBF0F6;
-
+$black: #000;
 
 body {
+  background-color: #d0d0d0;
+  font-family: sans-serif;
+
 }
+button {
+  margin: 10px;
+  margin-left: 0;
+  border-color: black;
+  background: none;
+  width: 125px;
+  text-transform: uppercase;
+  font-size: 13;
+  font-weight: 600;
+  height: 40px;
+  border-width: 2px;
+}
+
+
 
 
 .wrapper {
@@ -13,6 +30,7 @@ body {
   height: 100%;
   display: grid;
   grid-template: repeat(3, 15rem) / repeat(5, 15rem);
+  color: $black;
 }
 
 .square {
@@ -21,7 +39,6 @@ body {
   flex-direction: column;
   justify-content: center;
   text-transform: uppercase;
-  font-family: sans-serif;
 }
 
 .square i {
@@ -33,7 +50,20 @@ body {
   grid-column: 1 / 3;
   grid-row: 1;
   background-color: $dark-blue;
-  color: $lightest-blue;
+  h2 {
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  #rect-text-wrapper {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  p {
+    margin-block-end: 0.25em;
+    margin-block-start: 0.25em;
+    font-weight: 100;
+
+  }
 
 }
 
@@ -41,51 +71,55 @@ body {
   grid-column: 4 / 6;
   grid-row: 1 / 4;
   overflow: hidden;
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
 }
 
 #square_1 {
   grid-column: 3;
   grid-row: 1;
   background-color: $lightest-blue;
-  color: $dark-blue;
+
 
 }
 #square_2 {
   grid-column: 1;
   grid-row: 2;
-  background-color: $darkest-blue;
-  color: $light-blue;
+  background-color: $light-brown;
+
 }
 #square_3 {
   grid-column: 2;
   grid-row: 2;
   background-color: $light-blue;
-  color: $darkest-blue;
+
 
 }
 #square_4 {
   grid-column: 3;
   grid-row: 2;
   background-color: $dark-blue;
-  color: $lightest-blue;
+
 
 }
 #square_5 {
   grid-column: 1;
   grid-row: 3;
   background-color: $light-blue;
-  color: $darkest-blue;
+
 }
 #square_6 {
   grid-column: 2;
   grid-row: 3;
-  background-color: $darkest-blue;
-  color: $light-blue;
+  background-color: $light-brown;
+
 }
 #square_7 {
   grid-column: 3;
   grid-row: 3;
   background-color: $light-blue;
-  color: $darkest-blue;
+
 
 }
